STAC-11548 Adds docs for Kubernetes backup/restore functionality